<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RecyclerViewer">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="409dp"
        android:layout_height="00dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/lastRemover"/>

    <Button
        android:id="@+id/lastRemover"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="96dp"
        android:text="@string/removeLast"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="-2dp" />

    <Button
        android:id="@+id/removeAll"
        android:text="@string/removeAll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/lastRemover"/>
    <Button
        android:id="@+id/returnMain"
        android:text="@string/main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/removeAll"/>
</androidx.constraintlayout.widget.ConstraintLayout>